agregando metodo para crear moneda y formato para documentacion de insertar en  swagger
